force-app/main/default/objects/Opportunity/fields/Bill_Plan__c.field-meta.xml
<CustomField>
    <fullName>Bill_Plan__c</fullName>
    <description>Holds the Payment Plan</description>
    <label>Bill Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EFT1</fullName>
            </value>
            <value>
                <fullName>EFT6</fullName>
            </value>
            <value>
                <fullName>PAY1</fullName>
            </value>
            <value>
                <fullName>PAY6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>