force-app/main/default/objects/Opportunity/fields/QuoteNumber__c.field-meta.xml
<CustomField>
    <fullName>QuoteNumber__c</fullName>
    <description>Holds the GW Quote Number</description>
    <displayFormat>QTE{000000000}</displayFormat>
    <label>QuoteNumber</label>
    <type>AutoNumber</type>
</CustomField>