force-app/main/default/objects/Opportunity/fields/Selected_Plan__c.field-meta.xml
<CustomField>
    <fullName>Selected_Plan__c</fullName>
    <label>Selected Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>