force-app/main/default/objects/Opportunity/recordTypes/Guest.recordType-meta.xml
<RecordType>
    <fullName>Guest</fullName>
    <active>true</active>
    <businessProcess>Guest</businessProcess>
    <description>Has no membership and no policy</description>
    <label>Guest</label>
</RecordType>