force-app/main/default/objects/Opportunity/recordTypes/GW_Auto_Lead.recordType-meta.xml
<RecordType>
    <fullName>GW_Auto_Lead</fullName>
    <active>true</active>
    <businessProcess>GW Auto Lead</businessProcess>
    <description>Has membership and no policy</description>
    <label>GW Auto Lead</label>
</RecordType>