force-app/main/default/objects/Opportunity/recordTypes/Membership.recordType-meta.xml
<RecordType>
    <fullName>Membership</fullName>
    <active>true</active>
    <businessProcess>Membership</businessProcess>
    <description>Has no membership but policy exist</description>
    <label>Membership</label>
</RecordType>