force-app/main/default/objects/Opportunity/validationRules/Membership_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Membership_is_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>IF( (ISPICKVAL(StageName, &#39;Closed Won&#39;) &amp;&amp; Account.FinServ__TotalNumberOfFinAccounts__c = 0), true, false)</errorConditionFormula>
    <errorMessage>At this stage membership is mandatory. Please create a financial(membership) account for the respective person account to bind a policy</errorMessage>
</ValidationRule>